--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
